--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,20 +18,6 @@ jobs:
         with:
           ref: master
 
-      - name: Prepare
-        shell: bash
-        run: |
-          echo "SERVER_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
-          echo "version is: ${{ env.SERVER_VERSION }}"
-
-      - name: Post release updates
-        shell: bash
-        env:
-          UPLOAD_CHECKSUM: true
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          scripts/ci/post_release_updates.sh
-
       - name: Commit post release updates changes
         shell: bash
         env:
@@ -39,9 +25,10 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-          git add scripts/installer.sh
-          git add docs/content/download-and-install.md
-          git add docs/content/download-and-install.template.md
+          
+          echo "$(date)" >> file.txt
+
+          git add file.txt
           git commit --verbose -m "docs: ${{ env.SERVER_VERSION }} [skip ci]"
           git checkout -b release-docs-${{ env.SERVER_VERSION }}
           git push --verbose
@@ -55,4 +42,5 @@ jobs:
             --body "This PR updates the corresponding documentation pages for the current release \`${{ env.SERVER_VERSION }}\`." \
             --base "master" \
             --head "release-docs-${{ env.SERVER_VERSION }}" \
-            --label "v2" --label "enhancement" --label "documentation"
+            --label "v2" --label "enhancement" --label "documentation" \
+            --draft
